- create offer modal  that send data to send_offer method of brands controller

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -28,7 +28,7 @@
           <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
             <div class="btn-box pull-right">
               <button class="btn btn-engage"> ENGAGE</button>
-              <button class="btn btn-message"> MESSAGE</button>
+              <button class="btn btn-message"  data-toggle="modal" data-target="#offer-modal"> MESSAGE</button>
             </div>
             <div class="follower-box pull-right">
               <span class="follower-number"> 23,456 </span>
@@ -148,3 +148,24 @@
     </div>
   </div>
 </div>
+
+<!-- modal code for message/new offer modal -->
+
+<div id="offer-modal" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">New offer </h4>
+      </div>
+      <div class="modal-body">
+        <%= render partial: 'shared/offer', locals: { sender: current_user, receiver: influencer } %>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary">Send Offer</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!--- end of message/new offer modal-->
