--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -156,9 +156,10 @@
     font-size: 16px;
 }
 
-.modal-profile .influencer-profile-modal {
+.view-profile-modal {
     width: 75%;
-    margin-left: auto;
+    margin: auto;
+    padding-bottom: 35px;
 }
 
 .social-account-tab-content {
@@ -168,6 +169,7 @@
     padding-right: 30px;
     padding-bottom: 80px;
     margin-bottom: 20px;
+    overflow: hidden;
 }
 
 .social-account-tabs .social-account-nav-tabs a {
@@ -189,4 +191,46 @@
 
 .social-account-tabs .social-account-nav-tabs li a {
     padding-right: 45px;
+}
+
+.influencer-profile-modal label {
+    padding-right: 15px;
+    padding-left: 10%;
+    padding-bottom: 10px;
+    font-weight: 300;
+}
+
+.influencer-profile-modal input {
+    background-color: white;
+    padding: 4px;
+}
+
+.social-account-tab-content .form-group {
+    text-align: right;
+    margin-bottom: 0;
+    line-height: 1;
+}
+
+.modal-header .view-profile-modal-close {
+    color: #d9d9d9;
+    font-size: 3.4em;
+    opacity: 1.5;
+    font-weight: 100;
+    margin-top: -20px;
+}
+
+.social-media-info {
+    font-size: 18px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.view-profile-fb-twitter-color {
+    color: #329995;
+}
+
+.view-profile-industry {
+    font-size: 18px;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
