--- a/app/views/shared/_offer.html.erb
+++ b/app/views/shared/_offer.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for :offer, url: send_offer_brands_path, method: :post, class: 'form' do |f|%>
+<%= form_for :offer, url: send_offer_brands_path, method: :post, remote: true, class: 'form' do |f|%>
     <%= hidden_field_tag :authenticity_token, form_authenticity_token -%>
     <p> <%= "Sender name is #{sender.id} and receiver name is #{receiver.id}" %></p>
     <div class="form-group">
