--- a/app/views/brands/send_offer.js.erb
+++ b/app/views/brands/send_offer.js.erb
@@ -1,3 +1,3 @@
-//alert('Offer successfully created');
 $('#offer-modal').modal('hide');
 $('#show-brands-profile').modal('hide');
+window.location.reload();
