[Campaign] Campaign controller and model created, Influencer Campaign page created

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
 
-<% title 'BrandReach Brand Home' %>
+<% title 'Brand Home' %>
 
 <div class="header">
   <div class="wrapper-content">
