--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
 
-<% title 'BrandReach Influencers Home' %>
+<% title 'Influencers Home' %>
 
 <div class="header">
   <div class="wrapper-content">
