--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -165,6 +165,9 @@ only screen and (max-width: 540px) {
     border-radius: 0;
     padding: 20px 20px 0px 20px;
 }
+.payment-div {
+    overflow: hidden;
+}
 
 
 
