--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -51,7 +51,7 @@
 
         <div class="col-md-6">
           <%= f.label :state %>
-          <%= render partial: 'sub_region_select', locals: {parent_region: f.object.country} %>
+          <%= render partial: 'shared/sub_region_select', locals: {parent_region: f.object.country} %>
         </div>
       </div>
       <div class="form-group">
