- make functional offer page's star button
 -- now we can use stat button to make offer star or un star

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -692,5 +692,13 @@ th{
     min-height: 535px;
 }
 
+.standard-description {
+  overflow: hidden;
+  -ms-text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  display: block;
+}
+
 
 
