--- a/app/views/offers/_influencer_offer_view.erb
+++ b/app/views/offers/_influencer_offer_view.erb
@@ -1,14 +1,27 @@
 <tr>
   <td><span class="status-inbox status-inbox"></span></td>
-  <td class="squaredFour"><input type="checkbox"  value="1"/></td>
-  <td class="inbox-star"><a href="#"><i class="fa fa-star star-yellow"></i></a></td>
+  <td class="squaredFour"><input type="checkbox"  value="1" class="select-offer"/></td>
+  <td class="inbox-star">
+    <%= link_to toggle_star_offers_path(ids: [offer.id], authenticity_token: form_authenticity_token), method: :put, remote: true do %>
+        <i class="fa fa-star <%= offer.starred_by_influencer ? 'star-yellow' : 'star-grey' %>"></i>
+    <% end %>
+  </td>
   <td><%= image_tag offer.sender.profile_picture, class: 'inbox-logo-responsive' %></td>
   <td> <%= offer.sender.full_name %> </td>
   <td class="standard-description"> <%= offer.message %></td>
-  <td>
-    <button class="btn btn-accept" type="button" data-toggle="dropdown">Accept
-    </button>
-    <a href="#"><span class="deny">Deny</span></a>
+  <td class="btn-column">
+    <% if  offer.waiting? %>
+        <%= link_to 'Accept', accept_offer_path(offer, authenticity_token: form_authenticity_token), class: 'btn btn-accept', method: :put, remote: true %>
+        &nbsp;
+        <%= link_to 'Deny', deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
+    <% elsif offer.denied? && offer.deny_undo_able? %>
+        <%= link_to 'Undo Deny', undo_deny_offer_path(offer, authenticity_token: form_authenticity_token), class: 'deny', method: :put, remote: true %>
+    <% end %>
   </td>
   <td><%= offer.time %></td>
+  <!--<td>-->
+    <!--<button class="btn btn-accept" type="button" data-toggle="dropdown">Accept-->
+    <!--</button>-->
+    <!--<a href="#"><span class="deny">Deny</span></a>-->
+  <!--</td>-->
 </tr>
